[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-erid"
version = "0.1.0"
description = "MCP server: Russian internet-ad marking (маркировка рекламы, 38-ФЗ) checker — validate an erid token, audit an ad page for the «Реклама» label, advertiser details and erid, run a 38-ФЗ compliance checklist, and explain the marking rules. Read-only validator, advisory only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "erid",
  "advertising",
  "ad-marking",
  "marketing-compliance",
  "38-fz",
  "erir",
  "ord",
  "russia",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-erid"
Repository = "https://github.com/atomno-mcp/mcp-erid"
Issues = "https://github.com/atomno-mcp/mcp-erid/issues"
Changelog = "https://github.com/atomno-mcp/mcp-erid/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/erid"

[project.scripts]
atomno-mcp-erid = "mcp_erid.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_erid"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
